--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -8,11 +8,6 @@ $sea-water: rgb(39, 62, 88);
 $sea-bottom: rgb(19, 30, 42);
 $sky: rgb(195, 234, 231);
 
-$dot-1: rgb(29, 104, 140);
-$dot-2: rgb(40, 123, 166);
-$dot-3: rgb(40, 170, 197);
-$dot-4: rgb(148, 221, 228);
-
 $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
 
 // scss-lint:disable IdSelector
@@ -22,15 +17,6 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
 
 .openstax-tutor-footer {
     background-color: $sea-bottom;
-    color: ui-color(white);
-
-    .hero-quote {
-        color: inherit;
-    }
-
-    .social > .btn {
-        background-color: $sea-water;
-    }
 }
 
 .openstax-tutor-page {
@@ -38,12 +24,6 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
     background-color: ui-color(white);
     font-weight: 300;
     letter-spacing: 0.02em;
-
-    h1 {
-        @include width-up-to($phone-max) {
-            @include set-font(h2);
-        }
-    }
 
     .floating-tools {
         align-items: center;
@@ -57,10 +37,6 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
 
         > * {
             margin-bottom: 2rem;
-        }
-
-        @media(max-width: $phone-max) {
-            display: none;
         }
 
         @media (max-height: $phone-max * 1.25) {
@@ -195,13 +171,8 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
         padding: 6rem 0;
         position: relative;
 
-        @include width-up-to($phone-max) {
-            padding: 3rem 2rem;
-        }
-
         h1 {
             color: inherit;
-            margin-top: $normal-margin;
             width: auto;
         }
 
@@ -307,10 +278,12 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
 
         .headline {
             margin: 0 auto;
-            margin-left: 10%;
             max-width: 32em;
             padding: $normal-margin;
-            padding-right: 10rem;
+
+            &.expanded {
+                background-color: rgba(ui-color(white), 0.85);
+            }
         }
 
         .blurb {
@@ -318,9 +291,13 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
             max-width: 32rem;
         }
 
-        .btn {
+        .activate-popup {
             cursor: pointer;
             margin-left: 0;
+
+            &.hidden {
+                display: none;
+            }
         }
 
         #tutor-logo {
@@ -334,29 +311,6 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
                 @include set-font(hero-h1);
             }
         }
-
-        .popup-text {
-            background-color: ui-color(white);
-            border-radius: 0.5rem;
-            box-shadow: $hover-shadow;
-            padding: 0 2rem 1rem;
-            position: absolute;
-            right: 14rem;
-            top: 30rem;
-            width: calc(40% - 10rem);
-
-            @include width-up-to($tablet-max) {
-                margin-left: calc(10% + #{$normal-margin});
-                margin-right: 10rem;
-                margin-top: $normal-margin;
-                position: static;
-                width: auto;
-            }
-
-            @include width-up-to($phone-max) {
-                margin-right: calc(10% + #{$normal-margin});
-            }
-        }
     }
 
     #how-it-works {
@@ -364,9 +318,8 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
         overflow: visible;
         z-index: 3;
 
-        .text-content,
-        #how-it-works-target {
-            margin-top: -10rem;
+        .text-content {
+            margin-top: -10vw;
         }
 
         h1 {
@@ -378,9 +331,7 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
         }
 
         h2 {
-            @include set-font(h4);
-
-            text-align: center;
+            @include set-font(h3);
         }
 
         .description {
@@ -391,10 +342,6 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
             margin: 0 auto;
             padding: 3rem 0;
             width: 100%;
-
-            @include width-up-to($phone-max) {
-                padding-bottom: 0;
-            }
         }
 
 
@@ -467,8 +414,6 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
 
         h1 {
             margin-bottom: 3rem;
-
-            text-align: center;
         }
 
         .description,
@@ -523,63 +468,38 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
                 top: 20%;
                 transform: translateX(30%);
                 width: 20%;
-
-                @include width-up-to($tablet-max) {
-                    display: none;
-                }
             }
         }
 
 
         .thumbnails {
-            display: inline-flex;
+            display: flex;
             height: 8rem;
-            justify-content: space-between;
-            margin: 3rem auto 8rem;
-            max-width: 100%;
+            justify-content: center;
+            margin: 3rem 0 8rem;
             overflow-x: auto;
+            overflow-y: hidden;
             transition: 0.5s ease-in-out;
 
-            @include width-up-to($tablet-max) {
-                height: auto;
-            }
-
             >div {
-                align-items: center;
-                background-color: ui-color(white);
-                border: thin solid ui-color(form-border);
-                border-radius: 0.4rem;
                 cursor: pointer;
-                display: flex;
-                font-weight: bold;
                 height: 100%;
-                justify-content: center;
-                margin: 0 $normal-margin;
-                min-width: 13rem;
-                padding: $normal-margin;
-                width: 18rem;
+                max-width: 23rem;
+                padding-left: 3rem;
 
-                @include width-up-to($tablet-max) {
-                    min-width: 50vw;
-
-                    .big-screen {
-                        display: none;
-                    }
+                &.active img,
+                &.active video {
+                    border: 0.2rem solid os-color(light-blue);
                 }
 
-                &.active,
-                &.active {
-                    border-color: os-color(light-blue);
-                    box-shadow: $hover-shadow;
+                &:first-child {
+                    padding-left: 0;
                 }
 
-                .small-screen {
-                    display: none;
-
-                    @include width-up-to($tablet-max) {
-                        display: inline;
-                        font-weight: normal;
-                    }
+                img,
+                video {
+                    height: 100%;
+                    max-width: 20rem;
                 }
             }
         }
@@ -594,37 +514,9 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
             display: flex;
             flex-flow: row nowrap;
 
-            @include width-up-to($phone-max) {
-                display: block;
-
-                .big-screen {
-                    display: none;
-                }
-            }
-
-            .small-screen {
-                display: none;
-                margin-left: 2rem;
-                margin-right: 2rem;
-
-                @include width-up-to($phone-max) {
-                    display: block;
-                }
-            }
-
             .cell {
                 align-items: flex-start;
                 flex-basis: 50%;
-
-                &:first-child {
-                    order: 2;
-
-                    > div {
-                        display: flex;
-                        margin-right: 2rem;
-                        padding-bottom: 1rem;
-                    }
-                }
             }
 
             .fa-check-circle {
@@ -679,11 +571,10 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
             }
 
             .future-text {
-                line-height: 1.6;
+                line-height: normal;
 
                 p {
                     margin-top: 0;
-                    max-width: calc(100% - 4rem);
                 }
             }
         }
@@ -709,59 +600,6 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
     #where-money-goes {
         .text-content {
             margin-bottom: 5%;
-            text-align: center;
-        }
-
-        .big-screen {
-            @include width-up-to($phone-max) {
-                display: none;
-            }
-        }
-
-        .small-screen {
-            display: none;
-
-            @include width-up-to($phone-max) {
-                display: flex;
-                margin: 0;
-                padding: 0;
-                width: 100%;
-
-                .flexrow {
-                    align-items: center;
-                    display: flex;
-                    height: 2.5rem;
-                }
-
-                .box {
-                    box-shadow: $hover-shadow;
-                    font-size: 75%;
-                    padding: 2rem $normal-margin;
-                }
-
-                .dot {
-                    border-radius: 0.6rem;
-                    height: 1.2rem;
-                    margin-right: 1rem;
-                    width: 1.2rem;
-                }
-
-                .dot-1 {
-                    background-color: $dot-1;
-                }
-
-                .dot-2 {
-                    background-color: $dot-2;
-                }
-
-                .dot-3 {
-                    background-color: $dot-3;
-                }
-
-                .dot-4 {
-                    background-color: $dot-4;
-                }
-            }
         }
     }
 
@@ -795,7 +633,7 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
         background-repeat: no-repeat;
         background-size: 100% 100%;
         color: text-color(white);
-        margin-top: calc(-2rem - 2vmin);
+        margin-top: -1.7vw;
 
         h1 {
             margin-bottom: 8rem;
@@ -870,13 +708,12 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
     #learn-more {
         background-color: $sea-water;
         background-image: url('/images/openstax-tutor/ocean-bottom.svg');
-        background-position: left calc(100% + 0.4rem);
+        background-position: left calc(100% + 0.2rem);
         background-repeat: no-repeat;
         background-size: cover;
         color: text-color(white);
         min-height: 25vw;
-        padding-bottom: 4rem;
-        text-align: center;
+        padding: 4vw 0;
 
         h1 {
             @include set-font(h2);
@@ -892,9 +729,8 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
             justify-content: center;
             width: 100%;
 
-            @include width-up-to($tablet-max) {
-                align-items: center;
-                flex-direction: column;
+            @include width-up-to($phone-max) {
+                display: block;
             }
         }
 
