--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -617,7 +617,7 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
                 flex-basis: 50%;
 
                 &:first-child {
-                    order: 2;
+                    // order: 2;
 
                     > div {
                         display: flex;
