--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -559,13 +559,13 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
                 padding: $normal-margin;
                 width: 18rem;
 
-                // @include width-up-to($tablet-max) {
-                //     min-width: 50vw;
-                //
-                //     .big-screen {
-                //         display: none;
-                //     }
-                // }
+                @include width-up-to($tablet-max) {
+                    min-width: 50vw;
+
+                    .big-screen {
+                        display: none;
+                    }
+                }
 
                 &.active,
                 &.active {
@@ -573,14 +573,14 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
                     box-shadow: $hover-shadow;
                 }
 
-                // .small-screen {
-                //     display: none;
-                //
-                //     @include width-up-to($tablet-max) {
-                //         display: inline;
-                //         font-weight: normal;
-                //     }
-                // }
+                .small-screen {
+                    display: none;
+
+                    @include width-up-to($tablet-max) {
+                        display: inline;
+                        font-weight: normal;
+                    }
+                }
             }
         }
 
@@ -594,37 +594,37 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
             display: flex;
             flex-flow: row nowrap;
 
-            // @include width-up-to($phone-max) {
-            //     display: block;
-            //
-            //     .big-screen {
-            //         display: none;
-            //     }
-            // }
-            //
-            // .small-screen {
-            //     display: none;
-            //     margin-left: 2rem;
-            //     margin-right: 2rem;
-            //
-            //     @include width-up-to($phone-max) {
-            //         display: block;
-            //     }
-            // }
+            @include width-up-to($phone-max) {
+                display: block;
+
+                .big-screen {
+                    display: none;
+                }
+            }
+
+            .small-screen {
+                display: none;
+                margin-left: 2rem;
+                margin-right: 2rem;
+
+                @include width-up-to($phone-max) {
+                    display: block;
+                }
+            }
 
             .cell {
                 align-items: flex-start;
                 flex-basis: 50%;
 
-                // &:first-child {
-                //     order: 2;
+                &:first-child {
+                    order: 2;
                 //
                 //     > div {
                 //         display: flex;
                 //         margin-right: 2rem;
                 //         padding-bottom: 1rem;
                 //     }
-                // }
+                }
             }
 
             .fa-check-circle {
@@ -709,6 +709,59 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
     #where-money-goes {
         .text-content {
             margin-bottom: 5%;
+            text-align: center;
+        }
+
+        .big-screen {
+            @include width-up-to($phone-max) {
+                display: none;
+            }
+        }
+
+        .small-screen {
+            display: none;
+
+            @include width-up-to($phone-max) {
+                display: flex;
+                margin: 0;
+                padding: 0;
+                width: 100%;
+
+                .flexrow {
+                    align-items: center;
+                    display: flex;
+                    height: 2.5rem;
+                }
+
+                .box {
+                    box-shadow: $hover-shadow;
+                    font-size: 75%;
+                    padding: 2rem $normal-margin;
+                }
+
+                .dot {
+                    border-radius: 0.6rem;
+                    height: 1.2rem;
+                    margin-right: 1rem;
+                    width: 1.2rem;
+                }
+
+                .dot-1 {
+                    background-color: $dot-1;
+                }
+
+                .dot-2 {
+                    background-color: $dot-2;
+                }
+
+                .dot-3 {
+                    background-color: $dot-3;
+                }
+
+                .dot-4 {
+                    background-color: $dot-4;
+                }
+            }
         }
     }
 
@@ -742,7 +795,7 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
         background-repeat: no-repeat;
         background-size: 100% 100%;
         color: text-color(white);
-        margin-top: -1.7vw;
+        margin-top: calc(-2rem - 2vmin); // keeps divider and background images overlapped
 
         h1 {
             margin-bottom: 8rem;
@@ -817,12 +870,13 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
     #learn-more {
         background-color: $sea-water;
         background-image: url('/images/openstax-tutor/ocean-bottom.svg');
-        background-position: left calc(100% + 0.2rem);
+        background-position: left calc(100% + 0.4rem);
         background-repeat: no-repeat;
         background-size: cover;
         color: text-color(white);
         min-height: 25vw;
-        padding: 4vw 0;
+        padding-bottom: 4rem;
+        text-align: center;
 
         h1 {
             @include set-font(h2);
@@ -838,8 +892,9 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
             justify-content: center;
             width: 100%;
 
-            @include width-up-to($phone-max) {
-                display: block;
+            @include width-up-to($tablet-max) {
+                align-items: center;
+                flex-direction: column;
             }
         }
 
