Update copy on Adoption and Interest confirmation pages

--- a/src/app/pages/adoption-confirmation/header-1.html
+++ b/src/app/pages/adoption-confirmation/header-1.html
@@ -2,16 +2,16 @@
     <div class="flexrow">
         <div class="text">
             <h1>
-                Thank you!<br>
-                You're a textbook hero.
+                Got 10 more seconds?
             </h1>
+            <div>
+                Get connected with
+                additional resources by providing some extra information below.
+                Thanks for being a textbook hero!
+            </div>
             <div>
                 Want to tell us about another OpenStax book you're using?<br>
                 <a href="/adoption">Report another adopted textbook</a>
-            </div>
-            <div>
-                Want to help us even more? Take a minute to provide some extra
-                information below.
             </div>
         </div>
         <img class="hero-image" src="/images/components/student-chemistry.png" alt=""/>
