Fix build for dev

--- a/src/app/pages/home/education/education.scss
+++ b/src/app/pages/home/education/education.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 $girl-breakpoint: 60rem;
 $button-breakpoint: 100rem;
