--- a/src/app/components/shell/footer/footer.scss
+++ b/src/app/components/shell/footer/footer.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/pattern-library/core/pattern-library/elements/document';
+@import 'pattern-library/core/pattern-library/elements/document';
 
 .page-footer {
     @include set-font(helper-label);
