--- a/src/app/pages/errata/errata.scss
+++ b/src/app/pages/errata/errata.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 $node-size: 2.5rem;
 $bar-size: 0.2rem;
