--- a/src/app/pages/foundation/foundation.scss
+++ b/src/app/pages/foundation/foundation.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 .foundation-page {
     line-height: 3rem;
