--- a/src/styles/components/animations.scss
+++ b/src/styles/components/animations.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 @keyframes fadeIn {
     from { opacity: 0; }
