--- a/src/styles/components/filter-buttons.scss
+++ b/src/styles/components/filter-buttons.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/pattern-library/core/pattern-library/molecules';
+@import 'pattern-library/core/pattern-library/molecules';
 
 .strips-and-filter {
     position: relative;
